# D1_sim2real

./: CMakeLists.txt  README.md  package.xml
launch/: arm_zero_control.launch.py
policy/: agent.yaml  env.yaml  policy.pt
src/: arm_zero_control.cpp  config_loader.py  d1_bridge_node.cpp  d1_bridge_node.py  d1_wrapper.py  policy_controller.py  rest_position.py  run_task.py  zero_position.py
src/msg/: PubServoInfo_.hpp
