<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>d1_sim2real</name>
  <version>0.1.0</version>
  <description>Sim-to-real transfer for Unitree D1 arm: DDS bridge and RL policy runner</description>
  <maintainer email="luca.ortolan5@gmail.com">master26</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cyclonedds</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
